index.html - removed ID's in footer

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             </section>
         </main>
         <footer id="footer">
-            <div id="footer-about" class="nav-left"><a href="">Advertising</a></div>
-            <div id="footer-store" class="nav-left"><a href="">Business</a></div>
-            <div id="footer-middle" class="nav-left"><a href="">How search works</a></div>
-            <div id="footer-gmail" class="nav-center"><a href=""></a></div>
-            <div id="footer-images" class="nav-right"><a href="">Privacy</a></div>
-            <div id="footer-menu" class="nav-right"><a href="">Terms</a></div>
-            <div id="-login" class="nav-right"><a href="">Settings</a></div>
+            <div class="nav-left"><a href="">Advertising</a></div>
+            <div class="nav-left"><a href="">Business</a></div>
+            <div class="nav-left"><a href="">How search works</a></div>
+            <div class="nav-center"><a href=""></a></div>
+            <div class="nav-right"><a href="">Privacy</a></div>
+            <div class="nav-right"><a href="">Terms</a></div>
+            <div class="nav-right"><a href="">Settings</a></div>
         </footer>
     </div>
 </body>
